modules/gdscript/tests/scripts/analyzer/errors/nullable_binary_operator.gd
func test():
    var foo: int? = null
    print(foo + 1) # Should error
